--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.9.0"
   },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "start": "vite --host 0.0.0.0",
+  "dev": "vite",
+  "build": "tsc && vite build",
+  "preview": "vite preview"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
