--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "start": "vite --host 0.0.0.0",
   "dev": "vite",
   "build": "tsc && vite build",
-  "preview": "vite preview"
+  "preview": "vite preview",
+  "deploy": "npm run build && gh-pages -d dist",
+  "predeploy": "npm run build"
 },
   "eslintConfig": {
     "extends": [
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
     "vite": "^4.4.0"
