--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
 "scripts": {
   "start": "vite --host 0.0.0.0",
-  "dev": "vite",
+  "dev": "vite --host 0.0.0.0",
   "build": "tsc && vite build",
-  "preview": "vite preview",
+  "preview": "vite preview --host 0.0.0.0",
   "deploy": "npm run build && gh-pages -d dist",
   "predeploy": "npm run build"
 },
