--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 "scripts": {
   "start": "vite --host 0.0.0.0",
   "dev": "vite --host 0.0.0.0",
-  "build": "tsc && vite build",
+  "build": "tsc && vite build && cp .nojekyll dist/",
   "preview": "vite preview --host 0.0.0.0",
   "deploy": "npm run build && gh-pages -d dist",
   "predeploy": "npm run build"
