--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "framer-motion": "^12.23.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.0"
   },
-"scripts": {
-  "start": "vite --host 0.0.0.0",
-  "dev": "vite --host 0.0.0.0",
-  "build": "tsc && vite build && cp .nojekyll dist/",
-  "preview": "vite preview --host 0.0.0.0",
-  "deploy": "npm run build && gh-pages -d dist",
-  "predeploy": "npm run build"
-},
+  "scripts": {
+    "start": "vite --host 0.0.0.0",
+    "dev": "vite --host 0.0.0.0",
+    "build": "tsc && vite build && cp .nojekyll dist/",
+    "preview": "vite preview --host 0.0.0.0",
+    "deploy": "npm run build && gh-pages -d dist",
+    "predeploy": "npm run build"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
